--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sean's Portfolio</title>
-    <meta name="description" content="Portfolio for CEO Sean>" />
-    <meta name="author" content="Sean" />
-    <link rel="icon" type=image/png href="image/favicon.png" />
-    <script
-      src="https://kit.fontawesome.com/9a75e3b371.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <!-- Navbar -->
+  <nav id="navber"></nav>
+    <div class="navber__logo">
+      <i class="favicon"></i>
+      <a href-"#">Sean</a>
+    </div>
+      <ul class="navber__menu">
+        <li class="navber__menu__item">Home</li>
+        <li class="navber__menu__item">About</li>
+        <li class="navber__menu__item">Skills</li>
+        <li class="navber__menu__item">My work</li>
+        <li class="navber__menu__item">Testimonials</li>
+        <li class="navber__menu__item">Contact</li>
+      </ul>
+    </div>
+  <!-- About -->
+  <section id="about"></section>
+  <!-- Skills -->
+  <section id="skills"></section>
+  <!-- Work -->
+  <section id="work"></section>
+  <!-- Testimonials -->
+  <section id="testimonials"></section>
+  <!-- Contact -->
+  <section id="contact"></section>
+
+</body>
 </html>
