--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
         <li class="navber__menu__item">Contact</li>
       </ul>
     </div>
+
+  <!-- Home -->
+  <section id="home">
+    <img src="image/profile.png"
+         alt="Sean's profile photo"
+         class="home__avatar"
+    />
+    <h1 class="home__title">Hello, <br /> I am Sean </h1>
+    <h2 class="home__description">Blueberry Co-Founder</h2>
+    <button class="home__contact">Contact me</button>
+
+  </section>
+
   <!-- About -->
   <section id="about"></section>
   <!-- Skills -->
