--- a/index.html
+++ b/index.html
@@ -130,7 +130,139 @@
       </div>
   
   <!-- Work -->
-  <section id="work"></section>
+  <section id="work">
+    <h1>My work</h1>
+    <h3>Projects</h3>
+    <div class="work__categories">
+      <button class="category__btn">All<span class="category__count">8</span></button>
+      <button class="category__btn">FrontEn<span class="category__count">3</span></button>
+      <button class="category__btn">BackEnd<span class="category__count">6</span></button>
+      <button class="category__btn">Machine-Learnin<span class="category__count">9</span></button>  
+    </div>
+
+    <div class="work__projects">
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project1.png"
+          alt="Project1">
+        <div class="project__description">
+          <h3>Project 1</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project2.png"
+          alt="Project2">
+        <div class="project__description">
+          <h3>Project 2</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project3.png"
+          alt="Project3">
+        <div class="project__description">
+          <h3>Project 3</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project4.png"
+          alt="Project4">
+        <div class="project__description">
+          <h3>Project 4</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project5.png"
+          alt="Project5">
+        <div class="project__description">
+          <h3>Project 5</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project6.png"
+          alt="Project6">
+        <div class="project__description">
+          <h3>Project 6</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project7.png"
+          alt="Project7">
+        <div class="project__description">
+          <h3>Project 7</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+      <a 
+         href="https://github.com/007seann/Carrer-Portfolio" 
+         class="project"
+         target="blank"
+         >
+        <img 
+          class="Project__img"
+          src="image/projects/project8.png"
+          alt="Project8">
+        <div class="project__description">
+          <h3>Project 8</h3>
+          <span>Project Explanation</span>
+        </div>
+      </a>
+
+    </div>
+  </section>
   <!-- Testimonials -->
   <section id="testimonials"></section>
   <!-- Contact -->
