--- a/index.html
+++ b/index.html
@@ -265,6 +265,35 @@
   </section>
   <!-- Testimonials -->
   <section id="testimonials"></section>
+    <h1>Testimonial</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="image/testimonial/elon-musk.png"
+         alt="Elon-Musk"
+         class="testimonial__avater"
+         >
+         <div class="testimonial__speech-bubble">
+          <p>Sean is fucking awesome</p>
+          <p class="name"><a href="">Elon Musk /Tesla</a></p>
+         </div>
+      </div>
+
+      <div class="testimonial">
+        <img src="image/testimonial/larry-page.png"
+         alt="Larry Page"
+         class="testimonial__avater"
+         >
+         <div class="testimonial__speech-bubble">
+          <p>I want Blueberry</p>
+          <p class="name"><a href="">Larry Page /Alphabet</a></p>
+         </div>
+      </div>
+
+      
+
+    </div>
+
   <!-- Contact -->
   <section id="contact"></section>
 
