--- a/index.html
+++ b/index.html
@@ -290,12 +290,26 @@
          </div>
       </div>
 
-      
+  
 
     </div>
 
   <!-- Contact -->
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact__title">Let's talk</h1>
+    <h2 class="contact__email">007seann@gmail.com</h2>
+    <div class="contact__links">
+      <a href="https://github.com/007seann" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/sean-choi-7157181b6/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+    </div>
+    <p class="contact__rights">2022 Blueberry - All rights reserved
+       </p>
+
+  </section>
 
 </body>
 </html>
