CSS: Global setup

--- a/index.html
+++ b/index.html
@@ -300,10 +300,12 @@
     <h2 class="contact__email">007seann@gmail.com</h2>
     <div class="contact__links">
       <a href="https://github.com/007seann" target="_blank">
-        <i class="fa-brands fa-github"></i>
+        <i class="fab fa-github"></i>
+        <!-- <i class="fa-brands fa-github"></i> -->
       </a>
       <a href="https://www.linkedin.com/in/sean-choi-7157181b6/" target="_blank">
-        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa fa-linkedin-square"></i>
+        <!-- <i class="fa-brands fa-linkedin"></i> -->
       </a>
     </div>
     <p class="contact__rights">2022 Blueberry - All rights reserved
