--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Document</title>
 </head>
 <body>
+    <h1>Heading</h1>
+    <h2>Heading</h2>
+    <h3>Heading</h3>
+    <p>Paragraph</p> 
   <!-- Navbar -->
   <nav id="navber"></nav>
     <div class="navber__logo">
@@ -90,7 +94,7 @@
   </section>
 
   <!-- Skills -->
-  <section id="skills"></section>
+  <section id="skills">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -128,6 +132,8 @@
             <li><span>Math</span></li>
           </ul>
       </div>
+  </section>    
+
   
   <!-- Work -->
   <section id="work">
@@ -263,8 +269,9 @@
 
     </div>
   </section>
+  
   <!-- Testimonials -->
-  <section id="testimonials"></section>
+  <section id="testimonials">
     <h1>Testimonial</h1>
     <h3>See what they say about me</h3>
     <div class="testimonials">
@@ -293,6 +300,7 @@
   
 
     </div>
+  </section>
 
   <!-- Contact -->
   <section id="contact">
@@ -312,6 +320,8 @@
        </p>
 
   </section>
+
+  
 
 </body>
 </html>
