--- a/index.html
+++ b/index.html
@@ -4,28 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <p>Paragraph</p> 
+  <title>Sean's Portfolio</title>
+  <script src="https://kit.fontawesome.com/9a75e3b371.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  
+</head> 
+<body>  
   <!-- Navbar -->
-  <nav id="navber"></nav>
-    <div class="navber__logo">
-      <i class="favicon"></i>
-      <a href-"#">Sean</a>
+  <nav id="navbar">
+    <div class="navbar__logo">
+      <i class="fa-light fa-blueberries"></i>
+      <i class="fa-thin fa-blueberries"></i>
+      <a href="#">Sean</a>
     </div>
-      <ul class="navber__menu">
-        <li class="navber__menu__item">Home</li>
-        <li class="navber__menu__item">About</li>
-        <li class="navber__menu__item">Skills</li>
-        <li class="navber__menu__item">My work</li>
-        <li class="navber__menu__item">Testimonials</li>
-        <li class="navber__menu__item">Contact</li>
+    
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item active">Home</li>
+        <li class="navbar__menu__item">About</li>
+        <li class="navbar__menu__item">Skills</li>
+        <li class="navbar__menu__item">My work</li>
+        <li class="navbar__menu__item">Testimonials</li>
+        <li class="navbar__menu__item">Contact</li>
       </ul>
-    </div>
+    
+  </nav>  
 
   <!-- Home -->
   <section id="home">
