--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="section">
+  <section id="about" class="section section__container">
     <h1>About me</h1>
     <p>
       Studied AI at the University of Edinburgh
@@ -119,27 +119,73 @@
 
   <!-- Skills -->
   <section id="skills" class="section">
+    <div class="section__container">    
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
       Fast-Learner. Have all skills for programming. Master.
     </p>
-    <div class="skillset"></div>
+    <div class="skillset">
       <div class="skillset__left">
-        <h3 class="skillset_title">Skills</h3>
+        <h3 class="skillset__title">Skills</h3>
         <div class="skill">
-          <div class="skill_description">
-            <span>HTML</span>
-            <span>99%</span>
+          <div class="skill__description">
+            <span>Python</span>
+            <span>60%</span>
           </div>
           <div class="skill__bar">
-            <div class="skill__value"></div>
+            <div class="skill__value" style="width: 60%"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>JavaScript</span>
+            <span>60%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 60%"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>React</span>
+            <span>15%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 15%"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>HTML</span>
+            <span>20%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 20%"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>CSS</span>
+            <span>20%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 20%"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>Java</span>
+            <span>60%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 60%"></div>
           </div>
         </div>
       </div>
       <div class="skillset__right">
         <div class="tools">
-          <h3 class="skillset_title">Tools</h3>
+          <h3 class="skillset__title">Tools</h3>
           <ul class="tools__list">
             <li><span>Visual Studio Code</span></li>
             <li><span>IntelliJ</span></li>
@@ -149,13 +195,15 @@
           </ul>
         </div>
         <div class="etc"></div>
-          <h3 class="skillset_title">Etc</h3>
+          <h3 class="skillset__title">Etc</h3>
           <ul class="etc__list">
             <li><span>Git</span></li>
             <li><span>Management</span></li>
             <li><span>Math</span></li>
           </ul>
-      </div>
+      </div>  
+    </div>
+  
   </section>    
 
   
