--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work__categories">
-      <button class="category__btn">All<span class="category__count">8</span></button>
+      <button class="category__btn active">All<span class="category__count">8</span></button>
       <button class="category__btn">FrontEn<span class="category__count">3</span></button>
       <button class="category__btn">BackEnd<span class="category__count">6</span></button>
       <button class="category__btn">Machine-Learnin<span class="category__count">9</span></button>  
