--- a/index.html
+++ b/index.html
@@ -350,23 +350,35 @@
       <div class="testimonial">
         <img src="image/testimonial/elon-musk.png"
          alt="Elon-Musk"
-         class="testimonial__avater"
+         class="testimonial__avatar"
          >
          <div class="testimonial__speech-bubble">
-          <p>Sean is fucking awesome</p>
-          <p class="name"><a href="">Elon Musk /Tesla</a></p>
+          <p>Sean is fucking awesome
+            <br />
+            <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+            fuga libero nulla eveniet aperiam laborum, quis provident
+            quibusdam officiis reprehenderit, placeat neque perspiciatis vero
+            explicabo tempora, dignissimos accusantium inventore ducimus!
+          </p>
+          <p class="name"><a href="">Elon Musk</a> /Tesla</p>
          </div>
       </div>
 
       <div class="testimonial">
-        <img src="image/testimonial/larry-page.png"
-         alt="Larry Page"
-         class="testimonial__avater"
-         >
          <div class="testimonial__speech-bubble">
-          <p>I want Blueberry</p>
-          <p class="name"><a href="">Larry Page /Alphabet</a></p>
+          <p>I want Blueberry
+            <br />
+            <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+            fuga libero nulla eveniet aperiam laborum, quis provident
+            quibusdam officiis reprehenderit, placeat neque perspiciatis vero
+            explicabo tempora, dignissimos accusantium inventore ducimus!
+          </p>
+          <p class="name"><a href="">Larry Page</a> /Alphabet</p>
          </div>
+         <img src="image/testimonial/larry-page.png"
+         alt="Larry Page"
+         class="testimonial__avatar"
+         >
       </div>
 
   
