--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
 
   <!-- Home -->
   <section id="home">
-    <img src="image/profile.png"
-         alt="Sean's profile photo"
-         class="home__avatar"
-    />
-    <h1 class="home__title">Hello, <br /> I am Sean </h1>
-    <h2 class="home__description">Blueberry Co-Founder</h2>
-    <button class="home__contact">Contact me</button>
-  </section>
+    <div class="home__container">
+      <img src="image/profile.png"
+      alt="Sean's profile photo"
+      class="home__avatar"
+      />
+      <h1 class="home__title">Hello, <br /> I am Sean </h1>
+      <h2 class="home__description">Blueberry Co-Founder</h2>
+      <button class="home__contact">Contact me</button>
+    </div>
+   </section>
 
   <!-- About -->
   <section id="about" class="section section__container">
