--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <!-- Navbar -->
   <nav id="navbar">
     <div class="navbar__logo">
-      <i class="fa-light fa-blueberries"></i>
-      <i class="fa-thin fa-blueberries"></i>
+      <i class="fa-solid fa-circle"></i>
       <a href="#">Sean</a>
     </div>
       <ul class="navbar__menu">
@@ -31,8 +30,8 @@
       </ul>
     
       <!-- Toggle button-->
-      <button class="navbar__toggle-btn"> 
-        <i class="fa-thin fa-bars"></i>
+      <button class="navbar__toggle-btn">
+        <i class="fa-solid fa-bars"></i>
       </button>
   </nav>  
 
@@ -415,6 +414,12 @@
        </p>
 
   </section>
+
+  <!-- Arrow up -->
+  <button class="arrow">
+    <i class="fa-solid fa-arrow-up"></i>
+    <!-- <i class="fa-solid fa-circle-arrow-up"></i> -->
+  </button>
 
   
 
