--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn active">All<span class="category__count">8</span></button>
-        <button class="category__btn">FrontEn<span class="category__count">3</span></button>
-        <button class="category__btn">BackEnd<span class="category__count">6</span></button>
-        <button class="category__btn">Machine-Learnin<span class="category__count">9</span></button>  
+        <button class="category__btn active" data-filter="*">All<span class="category__count">8</span></button>
+        <button class="category__btn" data-filter="front-end">Front-End<span class="category__count">2</span></button>
+        <button class="category__btn" data-filter="back-end">Back-End<span class="category__count">3</span></button>
+        <button class="category__btn" data-filter="machine-learning">Machine-Learning<span class="category__count">3</span></button>  
       </div>
   
       <div class="work__projects">
@@ -229,12 +229,13 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="front-end"
            >
           <img 
             class="Project__img"
             src="image/projects/project1.png"
             alt="Project1">
-          <div class="project__description">
+          <div class="project__description" >
             <h3>Project 1</h3>
             <span>Project Explanation</span>
           </div>
@@ -244,12 +245,13 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="front-end"
            >
           <img 
             class="Project__img"
             src="image/projects/project2.png"
             alt="Project2">
-          <div class="project__description">
+          <div class="project__description" >
             <h3>Project 2</h3>
             <span>Project Explanation</span>
           </div>
@@ -259,6 +261,7 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="back-end"
            >
           <img 
             class="Project__img"
@@ -274,6 +277,7 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="back-end"
            >
           <img 
             class="Project__img"
@@ -289,6 +293,7 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="back-end"
            >
           <img 
             class="Project__img"
@@ -304,6 +309,7 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="machine-learning"
            >
           <img 
             class="Project__img"
@@ -319,6 +325,7 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="machine-learning"
            >
           <img 
             class="Project__img"
@@ -334,6 +341,7 @@
            href="https://github.com/007seann/Carrer-Portfolio" 
            class="project"
            target="blank"
+           data-type="machine-learning"
            >
           <img 
             class="Project__img"
