JS: Final Touch

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </p>
       </div>
     </div>
-    <div class="aboud__jobs">
+    <div class="about__jobs">
       <div class="job">
         <img 
           src="image/jobs/un_PNG20.png"
