modified for job initialliy

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       class="home__avatar"
       />
       <h1 class="home__title">Hello, <br /> I am Sean </h1>
-      <h2 class="home__description">Blueberry Co-Founder</h2>
+      <h2 class="home__description"></h2>
       <button class="home__contact">Contact me</button>
     </div>
    </section>
@@ -53,7 +53,7 @@
     <h1>About me</h1>
     <p>
       Studied AI at the University of Edinburgh
-      <br />Co-Founder Blueberry
+      <br />
       <!-- <br />2026 100milion richer -->
     </p>
     <div class="about__majors">
@@ -275,7 +275,7 @@
         </a>
   
         <a 
-           href="https://github.com/007seann" 
+           href="https://dwitter-beta.netlify.app/" 
            class="project"
            target="blank"
            data-type="back-end"
@@ -388,7 +388,7 @@
           class="testimonial__avatar"
          />
          <div class="testimonial__speech-bubble">
-          <p>Sean is fucking awesome
+          <p>Sean is awesome
             <br />
             <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
             fuga libero nulla eveniet aperiam laborum, quis provident
@@ -435,7 +435,7 @@
         <!-- <i class="fa-brands fa-linkedin"></i> -->
       </a>
     </div>
-    <p class="contact__rights">2022 Blueberry - All rights reserved
+    <p class="contact__rights">
        </p>
 
        
