--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
       </div>
     </div>
     <div class="about__jobs">
+      <div class="'jpb">
+        <img 
+        src="image/jobs/Layermind-Logo.png"
+        alt="Laymind-Logo"
+        class="job__logo"
+      />
+      <div class="job__description">
+      <p class="job__name">
+        Full-stack
+        <br />
+      </p>
+      <p class="job__period">2018-2020</p>
+      </div>
+      </div>
       <div class="job">
         <img 
           src="image/jobs/UN.png"
@@ -107,7 +121,7 @@
       <div class="job">
         <img 
           src="image/jobs/Riseup.png"
-          alt=Riseup"
+          alt="Riseup"
           class="job__logo"
         />
         <div class="job__description">
@@ -150,7 +164,7 @@
         <div class="skill">
           <div class="skill__description">
             <span>Python</span>
-            <span>60%</span>
+            <span>70%</span>
           </div>
           <div class="skill__bar">
             <div class="skill__value" style="width: 60%"></div>
@@ -159,7 +173,7 @@
         <div class="skill">
           <div class="skill__description">
             <span>JavaScript</span>
-            <span>60%</span>
+            <span>80%</span>
           </div>
           <div class="skill__bar">
             <div class="skill__value" style="width: 60%"></div>
@@ -177,7 +191,7 @@
         <div class="skill">
           <div class="skill__description">
             <span>HTML & CSS</span>
-            <span>20%</span>
+            <span>50%</span>
           </div>
           <div class="skill__bar">
             <div class="skill__value" style="width: 20%"></div>
@@ -186,7 +200,7 @@
         <div class="skill">
           <div class="skill__description">
             <span>Machine-Learning</span>
-            <span>20%</span>
+            <span>50%</span>
           </div>
           <div class="skill__bar">
             <div class="skill__value" style="width: 20%"></div>
@@ -195,7 +209,7 @@
         <div class="skill">
           <div class="skill__description">
             <span>Java</span>
-            <span>60%</span>
+            <span>70%</span>
           </div>
           <div class="skill__bar">
             <div class="skill__value" style="width: 60%"></div>
@@ -209,6 +223,7 @@
             <li><span>Visual Studio Code</span></li>
             <li><span>IntelliJ</span></li>
             <li><span>Pycharm</span></li>
+            <li><span>VIM</span></li>
             <li><span>...</span></li>
            
           </ul>
@@ -250,27 +265,27 @@
            >
           <img 
             class="Project__img"
-            src="image/projects/project1.png"
-            alt="Project1">
+            src="image/projects/career-portfolio.png"
+            alt="Career-Portfolio">
           <div class="project__description" >
             <h3>Carrer Portfolio</h3>
-            <span>Creating carrer-portfolio from the scrach</span>
+            <span>Creating career-portfolio from the scrach</span>
           </div>
         </a>
   
         <a 
-           href="https://github.com/007seann/Carrer-Portfolio" 
+           href="https://007seann.github.io/Catching-Game/" 
            class="project"
            target="blank"
            data-type="front-end"
            >
           <img 
             class="Project__img"
-            src="image/projects/project2.png"
-            alt="Project2">
+            src="image/projects/star-wars.png"
+            alt="Catching-Game">
           <div class="project__description" >
-            <h3>Project 2</h3>
-            <span>Project Explanation</span>
+            <h3>Catching Game</h3>
+            <span>Destroy all aliens within the time limit</span>
           </div>
         </a>
   
@@ -282,27 +297,27 @@
            >
           <img 
             class="Project__img"
-            src="image/projects/project3.png"
-            alt="Project3">
+            src="image/projects/dwitter.png"
+            alt="Dwitter">
           <div class="project__description">
             <h3>Dwitter(Twitter) Coding</h3>
-            <span>Desinging simple version of Twitter</span>
+            <span>Designing simple version of Twitter</span>
           </div>
         </a>
   
         <a 
-           href="https://github.com/007seann/Backend-Basis-with-Node" 
+           href="https://github.com/007seann/PizzaDronz" 
            class="project"
            target="blank"
            data-type="back-end"
            >
           <img 
             class="Project__img"
-            src="image/projects/project4.png"
-            alt="Project4">
+            src="image/projects/pizza-drone.png"
+            alt="pizza-drone">
           <div class="project__description">
-            <h3>Java Zoo</h3>
-            <span>Project Explanation</span>
+            <h3>Pizza Drone</h3>
+            <span>This project implements an application of a drone for pizza delivery.<br> A drone departs from Appleton Tower and ﬁles and picks up a pizza ordered at a restaurant where it receives orders. <br> </span>
           </div>
         </a>
   
