--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   <section id="about" class="section section__container">
     <h1>About me</h1>
     <p>
-      Studied AI at the University of Edinburgh
+      Currently studying AI at the University of Edinburgh.
+      <br>Fast learner and hard working guy.<br />
       <br />
       <!-- <br />2026 100milion richer -->
     </p>
@@ -90,7 +91,7 @@
       </div>
     </div>
     <div class="about__jobs">
-      <div class="'jpb">
+      <div class="job">
         <img 
         src="image/jobs/Layermind-Logo.png"
         alt="Laymind-Logo"
@@ -98,10 +99,13 @@
       />
       <div class="job__description">
       <p class="job__name">
-        Full-stack
-        <br />
+        <br><strong> Layermind </strong><br>
+        Full-stack - Joining to build the prototype of the proftech web application.
+        <br> 1. web application prototyte - front part
+        <br> 2. research for finding the optimised weighted value of a property
+        <br /> based on the distances between a property and POI data. 
       </p>
-      <p class="job__period">2018-2020</p>
+      <p class="job__period">2023~ongoing</p>
       </div>
       </div>
       <div class="job">
@@ -112,6 +116,7 @@
         />
         <div class="job__description">
         <p class="job__name">
+          <br><strong> UN </strong><br>
           Intelligence corpsman, Interpreter, and TOD Operator 
           <br />at UN Mission In South Sudan and ROK
         </p>
@@ -126,6 +131,7 @@
         />
         <div class="job__description">
         <p class="job__name">
+          <br><strong> RISEUP </strong><br>
           Project Manager and Student Mentor at rise-up NGO
         </p>
         <p class="job__period">2015-2017</p>
@@ -139,6 +145,7 @@
         />
         <div class="job__description">
         <p class="job__name">
+          <br><strong> LSP </strong><br>
           LSP education program Co-Founder
         </p>
         <p class="job__period">2010-2013</p>
