tweak Self-Proposal-Version

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="job__description">
       <p class="job__name">
         <br><strong> Layermind </strong><br>
-        Full-stack - Joining to build the prototype of the proftech web application.
+        Full-stack - Joining to build the minimum viable product of the proftech web application.
         <br> 1. web application prototyte - front part
         <br> 2. research for finding the optimised weighted value of a property
         <br /> based on the distances between a property and POI data. 
@@ -412,8 +412,11 @@
          />
          <div class="testimonial__speech-bubble">
           <p>
-            <br />
-            <br />I would like to highly recommend Sean with a focus on the application of machine learning to sustainable development in countries and local societies with limited resources. His passion to the field of geography and real estate is evident in his efforts to develop innovative solutions for automating and simplifying the real estate valuation process. Through his work, Sean aims to provide companies with an accurate and efficient means of valuing properties, with the ultimate goal of benefiting local communities financially through real estate development.As someone who has worked with Sean, I can attest to his character, dependability, and punctuality. I am confident that Sean would be a valuable addition to the academic community of the field.
+          
+            <br />I would like to highly recommend Sean with a focus on the application of machine learning to sustainable development in countries and local societies with limited resources.
+            His passion to the field of geography and real estate is evident in his efforts to develop innovative solutions for automating and simplifying the real estate valuation process.
+            Through his work, Sean aims to provide companies with an accurate and efficient means of valuing properties, with the ultimate goal of benefiting local communities financially through real estate development. 
+            As someone who has worked with Sean, I can attest to his character, dependability, and punctuality. I am confident that Sean would be a valuable addition to the academic community of the field.
    
           </p>
           <p class="name"><a href="">Chanwoo Choi</a> /Layermind Inc.</p>
@@ -423,13 +426,14 @@
       <div class="testimonial">
          <div class="testimonial__speech-bubble">
           <p>
-            <br />
+            
             <br />He has an excellent ability to apply a theory to real cases and find new improvements from feedback.
             When founding the LSP programme in my public high school with him, he was the leader and operator running the programme.
             LSP is an education programme which is focusing on developing and educating the basic skills of self-improvement in public school environments, which contain time management, planning, habit coaching, and brain-base learning methods.
-            Also, since this LSP programme is working on a public school environment it should be modified and reformed under the situation.
-            With the aid of his advices earned from his studies and his operation on the programme himself, the LSP programme can be developed further. <br>
-            Furthermore, his leadership skill was really helpful for the success of the LSP programme. He, as a co-founder of the programme, and we faced various difficulties when building it. The subjects of the progremme who is mainly high school student want to easily give up with having difficulties with the programme. However, they can successfully form their good habits through his persistent motivation and persuasion to them while listening to their difficulties. 
+            Also, since this LSP programme is working in a public school environment it should be modified and reformed under the situation.
+            With the aid of his advice earned from his studies and his operation on the programme himself, the LSP programme can be developed further. <br>
+            <br>Furthermore, his leadership skill was really helpful for the success of the LSP programme. He, as a co-founder of the programme, faced various difficulties when building it. The subjects of the progremme who is mainly high school student want to easily give up with having difficulties with the programme. However, they can successfully form good habits through his persistent efforts to motivate and persuade them while carefully listening to their difficulties. 
+            Thanks to his devoted efforts and achievements, LSP programme became the official programme in several high schools including my high school while appearing on KBS(Korean Broadcasting System) and The Chosun Ilbo(one of the representative daily newspapers in South Korea)
           </p>
           <p class="name"><a href="">Choonghoon Kwak</a> /LSP & Kyoung-An High School</p>
          </div>
