tweak2 selt-proposal-version

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       <p class="job__name">
         <br><strong> Layermind </strong><br>
         Full-stack - Joining to build the minimum viable product of the proftech web application.
-        <br> 1. web application prototyte - front part
+        <blockquote> 1. web application prototyte - front part
         <br> 2. research for finding the optimised weighted value of a property
-        <br /> based on the distances between a property and POI data. 
+        <br /> based on the distances between a property and POI data. </blockquote>
       </p>
       <p class="job__period">2023~ongoing</p>
       </div>
@@ -117,9 +117,14 @@
         />
         <div class="job__description">
         <p class="job__name">
-          <br><strong> UN </strong><br>
-          Intelligence corpsman, Interpreter, and TOD Operator 
-          <br />at UN Mission In South Sudan and ROK
+          <br><strong> UN & DMZ Police</strong><br>
+          - Intelligence corpsman: Analyzed/translated international affairs and UN/DMZ confidential report <br>
+          - Interpreter: Translate confectionary technology to Sudanese(English) <br>
+          - TOD Operator
+          <blockquote> 1. Observed the periphery of UN Mission In South Sudan (UNMISS) troops and its terrain for 24 hours at South Sudan
+              <br> 2. Observed North Korean terrain, and its officers and troops for 24 hours at The Korean Demilitarised Zone (DMZ)  <blockquote>
+
+
         </p>
         <p class="job__period">2018-2020</p>
         </div>
