tweak2 selt-proposal-version

--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
       <p class="job__name">
         <br><strong> Layermind </strong><br>
         Full-stack - Joining to build the minimum viable product of the proftech web application.
-        <blockquote> 1. web application prototyte - front part
+        <br> 1. web application prototyte - front part
         <br> 2. research for finding the optimised weighted value of a property
-        <br /> based on the distances between a property and POI data. </blockquote>
+         based on the distances between a property and POI data. </br>
       </p>
       <p class="job__period">2023~ongoing</p>
       </div>
       </div>
+
       <div class="job">
         <img 
           src="image/jobs/UN.png"
@@ -121,14 +122,13 @@
           - Intelligence corpsman: Analyzed/translated international affairs and UN/DMZ confidential report <br>
           - Interpreter: Translate confectionary technology to Sudanese(English) <br>
           - TOD Operator
-          <blockquote> 1. Observed the periphery of UN Mission In South Sudan (UNMISS) troops and its terrain for 24 hours at South Sudan
-              <br> 2. Observed North Korean terrain, and its officers and troops for 24 hours at The Korean Demilitarised Zone (DMZ)  <blockquote>
-
-
+          <br> 1. Observed the periphery of UN Mission In South Sudan (UNMISS) troops and its terrain for 24 hours at South Sudan
+          <br> 2. Observed North Korean terrain, and its officers and troops for 24 hours at The Korean Demilitarised Zone (DMZ) 
         </p>
-        <p class="job__period">2018-2020</p>
-        </div>
+      <p class="job__period">2018-2020</p>
       </div>
+      </div>
+
       <div class="job">
         <img 
           src="image/jobs/Riseup.png"
@@ -143,6 +143,7 @@
         <p class="job__period">2015-2017</p>
       </div>
       </div>
+
       <div class="job">
         <img 
           src="image/jobs/LSP.png"
