--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
             src="image/projects/project5.png"
             alt="Project5">
           <div class="project__description">
-            <h3>Project 5</h3>
-            <span>Project Explanation</span>
+            <h3></h3>
+            <span>     </span>
           </div>
         </a>
   
@@ -359,11 +359,13 @@
            >
           <img 
             class="Project__img"
-            src="image/projects/project6.png"
+            src="image/projects/distance-based property valuation.png"
             alt="Project6">
           <div class="project__description">
-            <h3>Project 6</h3>
-            <span>Project Explanation</span>
+            <h3>Distance-based Estimation of a Property Value in Singapore</h3>
+            <span>(On progress)  
+              We assume that the value of a property has correlation with the distance between the property and point of interests around it. <br>
+              We would like to show the correlation between them with the comparison to the market price of a property.</span>
           </div>
         </a>
   
