Modification for final project

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       <p class="job__name">
         <br><strong> Layermind </strong><br>
         Full-stack - Joining to build the minimum viable product of the proftech web application.
-        <br> 1. web application prototyte - front part
+        <br> 1. web application prototyte - Front part
         <br> 2. research for finding the optimised weighted value of a property
-         based on the distances between a property and POI data. </br>
+         based on the distances between a property and POI data. - AI part(ML, deep learning) </br>
       </p>
       <p class="job__period">2023~ongoing</p>
       </div>
