--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
   <section id="about" class="section section__container">
     <h1>About me</h1>
     <p>
-      Currently studying AI at the University of Edinburgh.
-      <br>Fast learner and hard-working guy.<br />
+      Welcome to my explorative journey through the realms of data and artificial intelligence. As a tenacious and expeditious
+learner deeply entwined with a passion for AI, I navigate through the waves of rapidly changing industrial paradigms 
+which AI continuously shapes and refines. In anticipation of an increasingly automated future, I conscientiously explore 
+the myriad of ways AI technology can be leveraged to catalyze lucrative and productive outcomes within various business
+contexts. 
+
+      <br><br />
       <br />
       <!-- <br />2026 100milion richer -->
     </p>
@@ -65,7 +70,7 @@
         </div>  
         <h2 class="major__title">Machine-Learning</h2>
         <p class="major__description">
-          Python, Java, Tensorflow
+          Python, Java, Tensorflow, TensorFlow Lite, Pytorch 
           <br /> Data Science, Big data
         </p>
       </div>
@@ -304,7 +309,7 @@
         </a>
   
         <a 
-           href="https://dwitter-beta.netlify.app/" 
+           href="https://youtube.com/shorts/-r_RhVGUpB0?feature=share" 
            class="project"
            target="blank"
            data-type="back-end"
@@ -370,18 +375,21 @@
         </a>
   
         <a 
-           href="https://github.com/007seann/Carrer-Portfolio" 
+           href="https://github.com/007seann/Pong-Pickup-Pro" 
            class="project"
            target="blank"
            data-type="machine-learning"
            >
+           
           <img 
             class="Project__img"
-            src="image/projects/project7.png"
+            src="image/projects/ppp demo.png"
             alt="Project7">
           <div class="project__description">
-            <h3>Project 7</h3>
-            <span>Project Explanation</span>
+            
+            <h3>Pong-Pickup-Pro</h3>
+            <span>The bot autonomously moves toward a ball and collect it with suction mechanism.<br>
+            Please, click this image to watch demo and detail description.</span>
           </div>
         </a>
   
@@ -396,8 +404,8 @@
             src="image/projects/project8.png"
             alt="Project8">
           <div class="project__description">
-            <h3>Project 8</h3>
-            <span>Project Explanation</span>
+            <h3>Pong-Pickup-Pro</h3>
+            <span>The bot autonomously moves toward a ball and collect it with suction mechanism.</span>
           </div>
         </a>
   
