--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ contexts.
       />
       <div class="job__description">
       <p class="job__name">
-        <br><strong> Layermind </strong><br>
+        <br><strong> Blueberry Property </strong><br>
         Full-stack - Joining to build the minimum viable product of the proftech web application.
         <br> 1. web application prototyte - Front part
         <br> 2. research for finding the optimised weighted value of a property
@@ -309,7 +309,7 @@ contexts.
         </a>
   
         <a 
-           href="https://youtube.com/shorts/-r_RhVGUpB0?feature=share" 
+           href="https://dwitter-beta.netlify.app/" 
            class="project"
            target="blank"
            data-type="back-end"
@@ -435,7 +435,7 @@ contexts.
             As someone who has worked with Sean, I can attest to his character, dependability, and punctuality. I am confident that Sean would be a valuable addition to the academic community of the field.
    
           </p>
-          <p class="name"><a href="">Chanwoo Choi</a> /Layermind Inc.</p>
+          <p class="name"><a href="">Chanwoo Choi</a> /Blueberry Property</p>
          </div>
       </div>
 
