modified profile photo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Home -->
   <section id="home">
     <div class="home__container">
-      <img src="image/profile.png"
+      <img src="image/Linkedin.jpg"
       alt="Sean's profile photo"
       class="home__avatar"
       />
