--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ contexts.
         </div>
         <div class="skill">
           <div class="skill__description">
-            <span>JavaScript</span>
+            <span>Java</span>
             <span>85%</span>
           </div>
           <div class="skill__bar">
@@ -200,25 +200,7 @@ contexts.
         </div>
         <div class="skill">
           <div class="skill__description">
-            <span>React</span>
-            <span>15%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value" style="width: 15%"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <div class="skill__description">
-            <span>HTML & CSS</span>
-            <span>50%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value" style="width: 50%"></div>
-          </div>
-        </div>
-        <div class="skill">
-          <div class="skill__description">
-            <span>Machine-Learning</span>
+            <span>JavaScript</span>
             <span>70%</span>
           </div>
           <div class="skill__bar">
@@ -227,11 +209,29 @@ contexts.
         </div>
         <div class="skill">
           <div class="skill__description">
-            <span>Java</span>
+            <span>Machine-Learning</span>
             <span>85%</span>
           </div>
           <div class="skill__bar">
             <div class="skill__value" style="width: 85%"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>NLP</span>
+            <span>85%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 85%"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>Project Management</span>
+            <span>95%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 95%"></div>
           </div>
         </div>
       </div>
